# Editor

./: .gitignore  CMakeLists.txt  README.adoc
binding_generator/: generate.py
docs/: AUTHORS.adoc
src/: core.cpp  core.h  main.cpp  stringizer.cpp  stringizer.h
src/binding/: binding_base.h  saveeasyrpgtext.cpp  saveeasyrpgtext.h  saveeasyrpgwindow.cpp  saveeasyrpgwindow.h
src/common/: image_loader.cpp  image_loader.h  lcf_widget_binding.h  tileops.cpp  tileops.h
src/model/: project.cpp  project.h  rpg_reflect.h
src/qml/: main.qml
src/ui/: main_window.cpp  main_window.h  main_window.ui  rpg_painter.cpp  rpg_painter.h
src/ui/commands/: change_actor_graphic_widget.cpp  change_vehicle_graphic_widget.cpp
src/ui/common/: palette_scene.cpp  palette_scene.h  picker_scene.cpp  tileset_scene.cpp  tileset_scene.h
src/ui/database/: actor_widget.cpp  actor_widget.h  actor_widget.ui  chipset_widget.cpp  chipset_widget.ui  database_dialog.cpp  database_dialog.h  database_dialog.ui  database_split_widget.ui  terrain_widget.cpp  terrain_widget.h  terrain_widget.ui
src/ui/event/: event_commands_widget.cpp  event_dialog.cpp  event_dialog.h  event_page_widget.cpp  event_page_widget.h
src/ui/map/: map_scene.cpp  map_scene.h
src/ui/maptree/: map_properties_dialog.cpp  map_properties_dialog.h  map_properties_dialog.ui
src/ui/other/: import_project_dialog.cpp  musicplayer.cpp  musicplayer.h  open_project_dialog.cpp  volumebutton.cpp
src/ui/picker/: picker_backdrop_widget.cpp  picker_backdrop_widget.h  picker_charset_widget.cpp  picker_charset_widget.h  (+9 more)
